# cool-rust-input

./: Cargo.toml  README.md
examples/: basic.rs  fileeditor.rs  full-custom-input.rs  simple-custom-input.rs  single-line-input.rs
src/: lib.rs  main.rs
